Sign in page HTML

--- a/index.html
+++ b/index.html
@@ -9,5 +9,74 @@
 </head>
 <body>
     
+    
+    <header class="header" id="header">
+        <div class="header-container">
+            <div class="logo">
+                <img class="logo" id="studee-logo" src="./Assets/studee logo.png">
+            </div> 
+        </div>
+    </header>
+
+
+    <div class="sign-in" id="sign-in">
+
+        <div class="sign-in-left">
+
+            <div class="left-container">
+                <!-- link back to previous page -->
+                <div class="link-back">
+                    <img class="arrow" alt="back arrow icon to previous page" src="./Assets/arrow-left.png">
+                    <p class="bold">Back</p>
+                </div>
+
+                <!-- title + Log in section -->
+                <div class="form-info" id="form-info">
+                    <h2>Sign in to your account</h2>
+                    <form aria-labelledby="sign-in" action="account-sign-in">
+                        <div class="form-input">
+                            <input class="form-text" placeholder="First name" type="first-name" id="first-name" name="first-name" required="required">
+                        </div>
+
+                        <div class="form-input">
+                            <input class="form-text" placeholder="Email address" type="email-adress" id="email-address" name="email-address" required="required">
+                        </div>
+
+                        <a href="#" style="text-decoration: none;"><p class="f-password bold">Forgot your password?</p></a>
+                    </form>
+                    <button class="log-in" type="submit">Sign in</button>
+                </div>
+
+                <!-- Alternatibe Sign in Section-->
+                <div class="alt-sign-in">
+                    <p class="bold">Or</p>
+
+                    <div class="alt-options">
+                        <div class="google">
+                            <img src="./Assets/icon_google.svg" alt="google logo">
+                            <p>With Google</p>
+                        </div>
+                        <div class="facebook">
+                            <img src="./Assets/icon_facebook.svg" alt="facebook logo">
+                            <p>Facebook</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="sign-in-right">
+            <div class="right-container">
+                <img class="sign-in-graphic" alt="graphic of a person sitting at a laptop, directional sign behind them" src="./Assets/Illustration.png">
+                <h1>Welcome Back</h1>
+                <h3>Log in to continue your journey</h3>
+            </div>
+        </div>
+
+    </div>
+
+
 </body>
 </html>
