Studee Sign in CSS Complete

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- link back to previous page -->
                 <div class="link-back">
                     <img class="arrow" alt="back arrow icon to previous page" src="./Assets/arrow-left.png">
-                    <p class="bold">Back</p>
+                    <p class="p-bold"> <span style="color: #603392;">Back</span></p>
                 </div>
 
                 <!-- title + Log in section -->
@@ -42,24 +42,26 @@
                             <input class="form-text" placeholder="Email address" type="email-adress" id="email-address" name="email-address" required="required">
                         </div>
 
-                        <a href="#" style="text-decoration: none;"><p class="f-password bold">Forgot your password?</p></a>
+                        <a href="#" style="text-decoration: none;"><p class="f-password p-bold">Forgot your password?</p></a>
                     </form>
-                    <button class="log-in" type="submit">Sign in</button>
+                    <button class="log-in form-text" type="submit"><span style="color: #ffff;">Sign in</span></button>
                 </div>
 
                 <!-- Alternatibe Sign in Section-->
                 <div class="alt-sign-in">
-                    <p class="bold">Or</p>
+                    <p class="p-bold">Or</p>
 
                     <div class="alt-options">
                         <div class="google">
                             <img src="./Assets/icon_google.svg" alt="google logo">
-                            <p>With Google</p>
+                            <p class="form-text" style="color: #3E82F7;">With Google</p>
                         </div>
                         <div class="facebook">
                             <img src="./Assets/icon_facebook.svg" alt="facebook logo">
-                            <p>Facebook</p>
+                            <p class="form-text" style="color: #3B5998;">Facebook</p>
                         </div>
+
+                        <p class="sign-up p-bold">Don't have an account? <span style="color: #603392;">Sign Up</span> </p>
                     </div>
                 </div>
 
